Version 1.8.0.99
------------------------------------------------------------------------------
* `rbind.fill` avoids array copying which had produced quadratic time
  complexity. `*dply` of large numbers of groups should be faster.
  (Contributed by Peter Meilstrup)

* `rbind.fill` handles non-numeric matrix columns (i.e. factor arrays,
  character arrays, list arrays); also arrays with more than 2
  dimensions can be used. Dimnames of array columns are now preserved.
  (Contributed by Peter Meilstrup)

* `rbind.fill(x,y)` converts factor columns of Y to character when
  columns of X are character. `join(x,y)` and `match_df(x,y)` now work
  when the key column in X is character and Y is factor. (Contributed
  by Peter Meilstrup)

* Fix faulty array allocation which caused problems when using `split_indices` 
  with large (> 2^24) vectors.  (Fixes #131)

* `list_to_array()` incorrectly determined dimensions if column of labels 
  contained any missing values (#169).

Version 1.8
------------------------------------------------------------------------------

NEW FEATURES AND FUNCTIONS

* `**ply` gain a `.inform` argument (previously only available in `llply`) - this gives more useful debugging information at the cost of some speed. (Thanks to Brian Diggs, #57)

* if `.dims = TRUE` `alply`'s output gains dimensions and dimnames, similar to `apply`. Sequential indexing of a list produced by `alply` should be unaffected. (Peter Meilstrup)

* `colwise`, `numcolwise` and `catcolwise` now all accept additional arguments in .... (Thanks to Stavros Macrakis, #62)

* `here` makes it possible to use `**ply` + a function that uses non-standard evaluation (e.g. `summarise`, `mutate`, `subset`, `arrange`) inside a function.  (Thanks to Peter Meilstrup, #3)

* `join_all` recursively joins a list of data frames. (Fixes #29)

* `name_rows` provides a convenient way of saving and then restoring row names so that you can preserve them if you need to. (#61)
